--- a/README.html
+++ b/README.html
@@ -198,7 +198,7 @@ summary {
 <h1>Group6</h1>
 <p>Capital Bike share</p>
 <p>7 Cities w/ data:</p>
-<p>Washington Boston Los Angeles = Metro-Trips-2020-Q4 New York Chicago Philadelphia San Francisco</p>
+<p>Washington Boston Los Angeles New York Chicago Philadelphia San Francisco</p>
 <p>We can compare and contrast the Bikeshare data between each city by looking at different variables offered:</p>
 <p>Usage differences per major city Start times/Stop times User Type (single trip/day pass, member (annual or monthly) Gender (self reported) Most used locations in each city Distance Time</p>
 <p>Can base the research question off of the theory above</p>
