spelling changes and titles

--- a/Slides.html
+++ b/Slides.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Bikeshare in LA, NYC and Phili</title>
+    <title>Bikeshare in LA, NYC and Philly</title>
     <meta charset="utf-8" />
     <meta name="author" content="Rachel, Ryan, Ina and Gorish" />
-    <meta name="date" content="2021-04-27" />
+    <meta name="date" content="2021-04-29" />
     <script src="libs/header-attrs-2.7/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
@@ -13,11 +13,11 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Bikeshare in LA, NYC and Phili
+# Bikeshare in LA, NYC and Philly
 ## Bikesharing
 ### Rachel, Ryan, Ina and Gorish
 ### Marymount
-### 2021-04-27
+### 2021-04-29
 
 ---
 
@@ -54,6 +54,26 @@ NYtripdata20 &lt;- read_csv("JC-202009-citibike-tripdata.csv")
 philly_trips &lt;- read_excel("philly trips.xlsx")
 ```
 
+```
+## Warning in read_fun(path = enc2native(normalizePath(path)), sheet_i = sheet, :
+## Expecting numeric in K50414 / R50414C11: got 'WAND_ERIN_47'
+```
+
+```
+## Warning in read_fun(path = enc2native(normalizePath(path)), sheet_i = sheet, :
+## Expecting numeric in K54373 / R54373C11: got 'WAND_ERIN_47'
+```
+
+```
+## Warning in read_fun(path = enc2native(normalizePath(path)), sheet_i = sheet, :
+## Expecting numeric in K60642 / R60642C11: got 'WAND_ERIN_47'
+```
+
+```
+## Warning in read_fun(path = enc2native(normalizePath(path)), sheet_i = sheet, :
+## Expecting numeric in K92480 / R92480C11: got 'Cara45'
+```
+
 ---
 
 ```r
@@ -63,7 +83,6 @@ parse_date_time("04-16-2021,1:09:20", orders = "mdy hms" )
 ```
 ## [1] "2021-04-16 01:09:20 UTC"
 ```
-
 ---
 # Let's Look at the LA and Phili Data
 
@@ -88,21 +107,21 @@ glimpse(trips)
 ```
 ## Rows: 37,877
 ## Columns: 15
-## $ trip_id             &lt;dbl&gt; 148179433, 148179933, 148182639, 148182739, 148180…
-## $ duration            &lt;dbl&gt; 14, 18, 141, 141, 15, 40, 24, 9, 23, 22, 249, 17, …
-## $ start_time          &lt;chr&gt; "10/1/2020 0:06", "10/1/2020 0:25", "10/1/2020 0:2…
-## $ end_time            &lt;chr&gt; "10/1/2020 0:20", "10/1/2020 0:43", "10/1/2020 2:5…
-## $ start_station       &lt;dbl&gt; 3042, 4404, 4482, 4482, 3074, 4302, 3078, 3005, 43…
-## $ start_lat           &lt;dbl&gt; 34.04930, 34.04813, 34.09437, 34.09437, 34.04417, …
-## $ start_lon           &lt;dbl&gt; -118.2388, -118.2710, -118.3310, -118.3310, -118.2…
-## $ end_station         &lt;dbl&gt; 3074, 4444, 4482, 4482, 3042, 4302, 4478, 4491, 43…
-## $ end_lat             &lt;dbl&gt; 34.04417, 34.06162, 34.09437, 34.09437, 34.04930, …
-## $ end_lon             &lt;dbl&gt; -118.2612, -118.3056, -118.3310, -118.3310, -118.2…
-## $ bike_id             &lt;dbl&gt; 6378, 12440, 19803, 18915, 20062, 17163, 16777, 19…
-## $ plan_duration       &lt;dbl&gt; 30, 30, 1, 1, 30, 30, 1, 30, 30, 1, 1, 30, 30, 30,…
-## $ trip_route_category &lt;chr&gt; "One Way", "One Way", "Round Trip", "Round Trip", …
-## $ passholder_type     &lt;chr&gt; "Monthly Pass", "Monthly Pass", "Walk-up", "Walk-u…
-## $ bike_type           &lt;chr&gt; "standard", "standard", "electric", "electric", "s…
+## $ trip_id             &lt;dbl&gt; 148179433, 148179933, 148182639, 148182739, 14818…
+## $ duration            &lt;dbl&gt; 14, 18, 141, 141, 15, 40, 24, 9, 23, 22, 249, 17,…
+## $ start_time          &lt;chr&gt; "10/1/2020 0:06", "10/1/2020 0:25", "10/1/2020 0:…
+## $ end_time            &lt;chr&gt; "10/1/2020 0:20", "10/1/2020 0:43", "10/1/2020 2:…
+## $ start_station       &lt;dbl&gt; 3042, 4404, 4482, 4482, 3074, 4302, 3078, 3005, 4…
+## $ start_lat           &lt;dbl&gt; 34.04930, 34.04813, 34.09437, 34.09437, 34.04417,…
+## $ start_lon           &lt;dbl&gt; -118.2388, -118.2710, -118.3310, -118.3310, -118.…
+## $ end_station         &lt;dbl&gt; 3074, 4444, 4482, 4482, 3042, 4302, 4478, 4491, 4…
+## $ end_lat             &lt;dbl&gt; 34.04417, 34.06162, 34.09437, 34.09437, 34.04930,…
+## $ end_lon             &lt;dbl&gt; -118.2612, -118.3056, -118.3310, -118.3310, -118.…
+## $ bike_id             &lt;dbl&gt; 6378, 12440, 19803, 18915, 20062, 17163, 16777, 1…
+## $ plan_duration       &lt;dbl&gt; 30, 30, 1, 1, 30, 30, 1, 30, 30, 1, 1, 30, 30, 30…
+## $ trip_route_category &lt;chr&gt; "One Way", "One Way", "Round Trip", "Round Trip",…
+## $ passholder_type     &lt;chr&gt; "Monthly Pass", "Monthly Pass", "Walk-up", "Walk-…
+## $ bike_type           &lt;chr&gt; "standard", "standard", "electric", "electric", "…
 ```
 ---
 # Let's Look at the  NYC Data
@@ -132,21 +151,21 @@ glimpse(NYtripdata19)
 ```
 ## Rows: 49,244
 ## Columns: 15
-## $ tripduration              &lt;dbl&gt; 145, 212, 569, 1380, 1346, 748, 137, 631, 17…
-## $ starttime                 &lt;time&gt; 00:37:00, 03:00:00, 07:13:00, 07:25:00, 07:…
-## $ stoptime                  &lt;time&gt; 03:03:00, 06:33:00, 16:42:00, 30:26:00, 30:…
-## $ `start station id`        &lt;dbl&gt; 3640, 3194, 3214, 3214, 3214, 3185, 3214, 31…
-## $ `start station name`      &lt;chr&gt; "Journal Square", "McGinley Square", "Essex …
-## $ `start station latitude`  &lt;dbl&gt; 40.73367, 40.72534, 40.71277, 40.71277, 40.7…
-## $ `start station longitude` &lt;dbl&gt; -74.06250, -74.06762, -74.03649, -74.03649, …
-## $ `end station id`          &lt;dbl&gt; 3206, 3679, 3184, 3792, 3792, 3280, 3214, 31…
-## $ `end station name`        &lt;chr&gt; "Hilltop", "Bergen Ave", "Paulus Hook", "Col…
-## $ `end station latitude`    &lt;dbl&gt; 40.73117, 40.72210, 40.71415, 40.71687, 40.7…
-## $ `end station longitude`   &lt;dbl&gt; -74.05757, -74.07146, -74.03355, -74.03281, …
-## $ bikeid                    &lt;dbl&gt; 29303, 29297, 29435, 29509, 29226, 26188, 29…
-## $ usertype                  &lt;chr&gt; "Subscriber", "Subscriber", "Customer", "Sub…
-## $ `birth year`              &lt;dbl&gt; 1991, 1993, 1977, 1965, 1968, 1981, 1969, 19…
-## $ gender                    &lt;dbl&gt; 1, 2, 1, 1, 2, 1, 2, 0, 1, 1, 1, 0, 2, 1, 1,…
+## $ tripduration              &lt;dbl&gt; 145, 212, 569, 1380, 1346, 748, 137, 631, 1…
+## $ starttime                 &lt;time&gt; 00:37:00, 03:00:00, 07:13:00, 07:25:00, 07…
+## $ stoptime                  &lt;time&gt; 03:03:00, 06:33:00, 16:42:00, 30:26:00, 30…
+## $ `start station id`        &lt;dbl&gt; 3640, 3194, 3214, 3214, 3214, 3185, 3214, 3…
+## $ `start station name`      &lt;chr&gt; "Journal Square", "McGinley Square", "Essex…
+## $ `start station latitude`  &lt;dbl&gt; 40.73367, 40.72534, 40.71277, 40.71277, 40.…
+## $ `start station longitude` &lt;dbl&gt; -74.06250, -74.06762, -74.03649, -74.03649,…
+## $ `end station id`          &lt;dbl&gt; 3206, 3679, 3184, 3792, 3792, 3280, 3214, 3…
+## $ `end station name`        &lt;chr&gt; "Hilltop", "Bergen Ave", "Paulus Hook", "Co…
+## $ `end station latitude`    &lt;dbl&gt; 40.73117, 40.72210, 40.71415, 40.71687, 40.…
+## $ `end station longitude`   &lt;dbl&gt; -74.05757, -74.07146, -74.03355, -74.03281,…
+## $ bikeid                    &lt;dbl&gt; 29303, 29297, 29435, 29509, 29226, 26188, 2…
+## $ usertype                  &lt;chr&gt; "Subscriber", "Subscriber", "Customer", "Su…
+## $ `birth year`              &lt;dbl&gt; 1991, 1993, 1977, 1965, 1968, 1981, 1969, 1…
+## $ gender                    &lt;dbl&gt; 1, 2, 1, 1, 2, 1, 2, 0, 1, 1, 1, 0, 2, 1, 1…
 ```
 ---
 
@@ -223,18 +242,6 @@ x.max &lt;- quantile(NY19$tripduration, 0.99)
 ggplot(NY19) + geom_histogram(aes(tripduration)) + xlim(c(0, x.max))
 ```
 
-```
-## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.
-```
-
-```
-## Warning: Removed 493 rows containing non-finite values (stat_bin).
-```
-
-```
-## Warning: Removed 2 rows containing missing values (geom_bar).
-```
-
 ![](Slides_files/figure-html/histogram-adjusted-x-axis-for-tripduration-in seconds-September-2019-1.png)&lt;!-- --&gt;
 
 
@@ -254,8 +261,23 @@ ggplot(NY19) + geom_histogram(aes(tripduration.min, binwidth=2), fill="darkgreen
 ```
 
 ![](Slides_files/figure-html/histogram-of-the-tripduration-in minutes-September-2019-1.png)&lt;!-- --&gt;
+---
+LA Trip Duration 
 
+```r
+ggplot(trips) + geom_histogram(aes(duration, binwidth=4), fill="red", alpha=0.4) + xlim(c(0, x.max)) + theme_classic()
+```
 
+![](Slides_files/figure-html/histogram_of_tripduration_in_minutes_LA20-1.png)&lt;!-- --&gt;
+---
+Phillidelphia Trip Duration 
+
+```r
+ggplot(philly_trips) + geom_histogram(aes(duration, binwidth=4), fill="blue", alpha=0.4) + xlim(c(0, x.max)) + theme_classic()
+```
+
+![](Slides_files/figure-html/histogram_of_tripduration_in_minutes_PH19-1.png)&lt;!-- --&gt;
+---
 
 
 
